ggplot2 0.7.1  (2008-XX)
----------------------------------------

* geom_path and geom_line gain arrows argument to match geom_segment
* geom_point, geom_pointrange and geom_boxplot: now use shape = 16 instead of 19.  This shape does not have a border from R 2.8 on, and so will look better when displayed transparently.
* xlim and ylim now produce discrete scales when appropriate
* geom_bar: default fill colour is now much closer to black to match the defaults in other geoms (point, line, etc)
* facet_grid: margins now grouped correctly in default case (non-aesthetic variables ignored when generating default group value)
* theme_bw: tweaks to make black and white theme look a little nicer
* theme_line: setting size works correctly
* theme_rect, theme_segment: size now measured in mm, to be consistent with the rest of ggplot
* theme: panel.empty setting removed as it is no longer used
* theme: new theme setting panel.margin (a unit) controls gap between panels in facetted plots (for both grid and wrap)
* scale_gradient*: axes are correctly labelled when a transformation is used
* scale_discrete_position: more aesthetically pleasing expansion for a wider ranges of plots (picks expansion based on whether or not geom with width used, e.g. bars)
* scale_position: both discrete and continuous gain a new formatter argument to control the default formatting of the axis labels, see also handy numeric formatters: dollar, comma and percent
* facet_wrap: new facetter which wraps a 1d ribbon of panels into 2d
* qplot: now uses facet_wrap if formula looks like ~ a + b (as opposed to a ~ b)
* facet_grid: new support for varying scales in rows and columns
* scale_discrete_position: empty levels are no longer displayed by default, if you want them, use breaks = levels(myfactor)
* ggsave: default dpi changed to 300, on the assumption that you are saving the plot for printing
* scale_gradient: tweak default colours to make more aesthetically pleasing